traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: '=' expected but ';' found.
  var cpt; Int = 0
         ^